# faeyon

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  README.md  cloud_deployment_example.py  cloud_deployment_live_example.py  cloud_requirements.txt  example_training.py  gradient_accumulation_example.py  logging_example.py  mkdocs.yml  multi_node_example.py  pyproject.toml  requirements.txt  setup.cfg  setup.cfg.tmp  setup.py  setup_multi_node.sh
docs/: README.md  index.md  requirements.txt
docs/api/: magic.md  metrics.md  models.md  nn.md  training.md  utils.md
docs/assets/: homepage.css  homepage.js
docs/development/: contributing.md  testing.md
docs/examples/: basic.md  training.md
docs/getting-started/: installation.md  quickstart.md
faeyon/: __init__.py  cloud.py  core.py  distributed.py  enums.py  io.py  magic.py  magic_temp.py  metrics.py  modifiers.py  recipes.py  recipes_backup.py  trainer.py  try.py  utils.py
faeyon/cv/: vit.py
faeyon/datasets/: __init__.py  dataset.py
faeyon/layers/: __init__.py  attention.py  embeddings.py  masks.py
faeyon/magic/: __init__.py  _opinfo.py  args.py  ast_x.py  faek.py  meta.py  mode.py  spells.py  tracer.py  x.py  x.pyi
faeyon/metrics/: __init__.py  base.py  classification.py  collection.py  mean.py
faeyon/models/: __init__.py  (+3 more)
notebooks/: benchmark.ipynb  run_qwen3.ipynb  training.ipynb
scripts/: MULTI_NODE_TRAINING.md  copy_weights_vit.py  example_training.py  logging_requirements.txt  multi_node_example.py  upload_hf.py
tests/: common.py  test_io.py  test_magic.py  test_metrics.py  test_try.py
(+76 files in other folders)
