[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[tool.ruff]
line-length = 100
preview = true

[tool.ruff.lint]
select = [
    "E301",
    "E302",
    "E303", 
    "E305",
    "E306",

    "W292",
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"] 


[tool.pytest.ini_options]
addopts = "--color=no -s --cov=faeyon/ --cov-report html:.test_coverage/html"
required_plugins = ["pytest-cov"]


[tool.mypy]
files = ["faeyon"]
mypy_path = "$MYPY_CONFIG_FILE_DIR/stubs"

[[tool.mypy.overrides]]
module = "torch.*"
ignore_errors = true
